<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_full_name">Sudoku Insight</string>
    <string name="app_short_name">Insight</string>
    <string name="button_always">Always</string>
    <string name="button_back">Reverse</string>
    <string name="button_capture_play">Play Now</string>
    <string name="button_capture_save">Save for Later</string>
    <string name="button_import_collection">Import Collection</string>
    <string name="button_jump_back">Jump Back</string>
    <string name="button_jump_forward">Jump Forward</string>
    <string name="button_once">Just Once</string>
    <string name="button_pause">Pause</string>
    <string name="button_play">Play</string>
    <string name="button_show_solution">Show Solution</string>
    <string name="button_skip">Skip</string>
    <string name="dialog_first_time_message">Welcome to Sudoku Insight.  There is help available via the Help menu, and there are a few settings you may wish to adjust in the Settings menu.\n\nEnjoy!</string>
    <string name="dialog_first_time_here_message">Welcome back.  If you see familiar puzzles, consider changing the stream number in Settings.</string>
    <string name="dialog_improper_message">This Sudoku has more than one solution.  Play it anyway?</string>
    <string name="dialog_improper_title">"\"Improper\" Puzzle"</string>
    <string name="dialog_show_solution_message">Show the solution for this puzzle?</string>
    <string name="hint_capture_source">Where does this puzzle come from?</string>
    <string name="hint_collection_name">Name</string>
    <string name="menu_about">About</string>
    <string name="menu_apply">Apply Selected Insight</string>
    <string name="menu_capture_puzzle">Enter a Puzzle</string>
    <string name="menu_clear">Clear Insights</string>
    <string name="menu_help">Help</string>
    <string name="menu_help_about">About</string>
    <string name="menu_help_capture">Entering Puzzles</string>
    <string name="menu_help_contents">Contents</string>
    <string name="menu_help_info">Puzzle Details</string>
    <string name="menu_help_list">Listing Puzzles</string>
    <string name="menu_help_overview">Welcome</string>
    <string name="menu_help_replay">Reviewing Puzzles\' Solutions</string>
    <string name="menu_help_settings">Settings Help</string>
    <string name="menu_help_sudoku">Solving Sudoku</string>
    <string name="menu_list_puzzles">List Puzzles</string>
    <string name="menu_new_trail">New Trail</string>
    <string name="menu_play">Play</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_redo_to_end">Redo to End</string>
    <string name="menu_resume_replay">Resume Review</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_show_solution">Show Solution</string>
    <string name="menu_sort_by_elapsed">By Elapsed Time</string>
    <string name="menu_sort_by_number">By Number</string>
    <string name="menu_sort_by_time">By Last Played Time</string>
    <string name="menu_sort_by_vote">By Fun</string>
    <string name="menu_sort_list">Sort</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_undo_to_start">Undo to Start</string>
    <string name="prefs_device_name">Device name</string>
    <string name="prefs_improper_desc">Puzzles may have more than one solution; makes solving harder</string>
    <string name="prefs_no_share_desc">Please consider allowing Sudoku scientists to see your moves.  See Help for details.</string>
    <string name="prefs_no_user_id">None</string>
    <string name="prefs_no_user_id_desc">None: You may see the same puzzles on other devices.</string>
    <string name="prefs_proper_desc">Every puzzle has just one solution; makes solving easier</string>
    <string name="prefs_proper_only">Proper sudokus only</string>
    <string name="prefs_share_data">Share anonymous data</string>
    <string name="prefs_share_desc">Thank you for supporting Sudoku science!</string>
    <string name="prefs_stream">Puzzle stream number</string>
    <string name="prefs_user_id">Account</string>
    <string name="text_all_puzzles">All puzzles</string>
    <string name="text_already_have_collection_source">You already have this collection!</string>
    <string name="text_already_have_collection_name">You already have a collection with this name!</string>
    <string name="text_already_have_puzzle">You already have this puzzle!</string>
    <string name="text_attempt_gave_up">Gave up after %1$s; last played %2$s</string>
    <string name="text_attempt_last_replayed">Last reviewed %1$s.</string>
    <string name="text_attempt_playing">In progress for %1$s; last played %2$s</string>
    <!-- deliberately not using elapsed time argument: -->
    <string name="text_attempt_queued">Queued to play %2$s</string>
    <string name="text_attempt_replay">Review for insight</string>
    <string name="text_attempt_show_solution">Show solution</string>
    <!-- deliberately not using elapsed time argument: -->
    <string name="text_attempt_skipped">Skipped %2$s</string>
    <string name="text_attempt_solved">Solved in %1$s %2$s</string>
    <string name="text_attempt_start_time">Started %1$s.</string>
    <string name="text_captured_puzzles">Captured puzzles</string>
    <string name="text_broken_symmetry">Symmetry (broken): %1$s.</string>
    <string name="text_collection_date">%1$s, %2$s</string>
    <string name="text_collection_desc">Read %1$d puzzles from %2$s.</string>
    <string name="text_collection_in_start">"In: "</string>
    <string name="text_collection_separator">"; "</string>
    <string name="text_congrats">Congratulations!</string>
    <string name="text_generated_puzzles">Generated puzzles</string>
    <string name="text_info_title">#%1$d Details</string>
    <string name="text_loading_collection">Reading puzzles, please wait…</string>
    <string name="text_loading_collection_failed">Unable to read puzzles.</string>
    <string name="text_move_and_trail_counts">Moves: %1$d; trails: %2$d.</string>
    <string name="text_move_number">%1$d of %2$d</string>
    <string name="text_no_vote">Normal fun.</string>
    <string name="text_num_solutions">Solutions: %1$d.</string>
    <string name="text_oops">Oops!</string>
    <string name="text_puzzle_full_name">Sudoku %1$s (#%2$d on this device)</string>
    <string name="text_puzzle_full_number">Sudoku #%1$d on this device</string>
    <string name="text_puzzle_name">Sudoku %1$s (#%2$d)</string>
    <string name="text_puzzle_name_start">"Sudoku %1$s (#%2$d): "</string>
    <string name="text_puzzle_number">#%1$d</string>
    <string name="text_puzzle_number_start">"Sudoku #%1$d: "</string>
    <string name="text_puzzle_stats_summary">Attempted by: %1$d; solved by: %2$d; avg time: %3$s.</string>
    <string name="text_rating_easy">Easy</string>
    <string name="text_rating_extremely_hard">Extremely Hard</string>
    <string name="text_rating_hard">Hard</string>
    <string name="text_rating_in_progress">Rating in progress, at least: %1$.1f</string>
    <string name="text_rating_moderate">Moderate</string>
    <string name="text_rating_number">Rating: %1$.1f</string>
    <string name="text_rating_number_only">%1$.1f</string>
    <string name="text_rating_very_hard">Very Hard</string>
    <string name="text_recommended_puzzles">Recommended puzzles</string>
    <string name="text_replay_title">Review #%1$d</string>
    <string name="text_saving_collection">Saving collection…</string>
    <string name="text_sentence_end">.</string>
    <string name="text_source">Source: %1$s</string>
    <string name="text_symmetry">Symmetry: %1$s.</string>
    <string name="text_synced_puzzles">Synced puzzles</string>
    <string name="text_vote_down">Not so fun.</string>
    <string name="text_vote_question">How fun was this puzzle?</string>
    <string name="text_vote_up">Extra fun!</string>

</resources>
