<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!--    
    <item android:id="@+id/menu_sort_list"
        android:title="@string/menu_sort_list"
        android:showAsAction="never|withText"
        android:orderInCategory="10"
        >
        <menu>
            <item android:id="@+id/menu_sort_by_number"
                android:title="@string/menu_sort_by_number"
                android:checkable="true"
                />
            <item android:id="@+id/menu_sort_by_elapsed"
                android:title="@string/menu_sort_by_elapsed"
                android:checkable="true"
                />
            <item android:id="@+id/menu_sort_by_time"
                android:title="@string/menu_sort_by_time"
                android:checkable="true"
                />
        </menu>
    </item>
  -->
            <item android:id="@+id/menu_sort_by_number"
                android:title="@string/menu_sort_by_number"
                android:checkable="true"
                />
            <item android:id="@+id/menu_sort_by_elapsed"
                android:title="@string/menu_sort_by_elapsed"
                android:checkable="true"
                />
            <item android:id="@+id/menu_sort_by_time"
                android:title="@string/menu_sort_by_time"
                android:checkable="true"
                />
</menu>