<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	
	    <us.blanshard.sudoku.android.SudokuView
	        android:id="@+id/info_grid"
	        android:layout_width="200dp"
	        android:layout_height="200dp"
	        android:layout_gravity="center"
	        android:padding="8dp"
	        />
	
	    <LinearLayout
	        android:id="@+id/vote_layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:orientation="vertical"
	        android:padding="8dp"
	        android:visibility="gone"
	        >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/text_vote_question"
	            style="@android:style/TextAppearance.Holo.Medium"
	            />
	
		    <RadioGroup
		        android:id="@+id/vote_group"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        >
		        
		        <RadioButton
		            android:id="@+id/radio_no_vote"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/text_no_vote"
		            />
		
		        <RadioButton
		            android:id="@+id/radio_vote_up"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/text_vote_up"
		            />
		
		        <RadioButton
		            android:id="@+id/radio_vote_down"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/text_vote_down"
		            />
		    </RadioGroup>
	    </LinearLayout>
	
	    <WebView
	        android:id="@+id/info_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
	
	</LinearLayout>
</ScrollView>
